[package]
name = "llm_quizzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.11.10"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.x" 
tokio = { version = "1", features = ["full"] }



